--- a/css/style.css
+++ b/css/style.css
@@ -106,16 +106,17 @@ h6 {
 /*--------------------*/
 .header {
     width: 100%;
-    margin: 21px 0 0 0;
+    /* margin: 21px 0 0 0; */
 }
 .header__container {
     min-height: 88px;
     display: flex;
     justify-content: space-between;
-    /* margin: 21px 0 0 0; */
+    align-items: center;
+    padding-top: 21px; /* margin: 21px 0 0 0; */
 }
 .top-logo {
-    margin: 16px 0 0 0;
+    /* margin: 16px 0 0 0; */
 }
 .logo a {
     display: flex;
@@ -139,7 +140,7 @@ h6 {
 }
 .menu {
     display: flex;
-    margin: 0 0 0 221px;
+    /* margin: 0 0 0 221px; */
 }
 .menu__item {
     color: #000;
@@ -148,23 +149,14 @@ h6 {
     font-size: 20px;
     line-height: calc (30 / 20 * 100%);
 }
-.menu__item:nth-child(1) {
-    margin: 35px 63px 0 0;
-}
-.menu__item:nth-child(2) {
-    margin: 33px 66px 0 0;
-}
-.menu__item:nth-child(3) {
-    margin: 32px 67px 0 0;
-}
-.menu__item:nth-child(4) {
-    margin: 30px 0 0 0;
+.menu__item:not(:last-child) {
+    margin: 0 65px 0 0;
 }
 /* .menu__item:not(:last-child) {
     margin: 0  0 0;
 } */
 .top-hearts {
-    margin: 0 0 0 295px;
+    /* margin: 0 0 0 295px; */
 }
 .top-hearts img {
     width: 88px;
@@ -204,18 +196,10 @@ h6 {
         font-size: 14px;
         line-height: calc (30 / 20 * 100%);
     }
-    .menu__item:nth-child(1) {
-        margin: 30px 37px 0 0;
+    .menu__item:not(:last-child) {
+        margin: 0 37px 0 0;
     }
-    .menu__item:nth-child(2) {
-        margin: 28px 37px 0 0;
-    }
-    .menu__item:nth-child(3) {
-        margin: 27px 37px 0 0;
-    }
-    .menu__item:nth-child(4) {
-        margin: 25px 0 0 0;
-    }
+
     .top-hearts img {
         width: 68px;
         height: 68px;
@@ -237,21 +221,12 @@ h6 {
         flex-wrap: wrap;
         justify-content: center;
         margin: 0;
+        padding-top: 20px;
         /* flex-direction: column; */
     }
-    .menu__item:nth-child(1) {
-        margin: 15px 10px 0 0;
+    .menu__item:not(:last-child) {
+        margin: 0 15px 0 0;
     }
-    .menu__item:nth-child(2) {
-        margin: 13px 10px 0 0;
-    }
-    .menu__item:nth-child(3) {
-        margin: 11px 10px 0 0;
-    }
-    .menu__item:nth-child(4) {
-        margin: 9px 0 0 0;
-    }
-
     .top-hearts {
         margin: 0;
     }
@@ -265,7 +240,8 @@ h6 {
 }
 .main__body {
     display: flex;
-    margin: 154px 0 0 0;
+    /* margin: 154px 0 0 0; */
+    padding-top: 154px;
 }
 .main__column {
     flex: 0 1 50%;
@@ -273,7 +249,7 @@ h6 {
 }
 .decor__left {
     position: absolute;
-    top: 87%;
+    top: 67%;
     left: 2%;
     width: 30px;
     height: 174px;
@@ -297,8 +273,8 @@ h6 {
 }
 .brand__game {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
     top: 46px;
     left: 46px;
     text-transform: uppercase;
@@ -310,8 +286,8 @@ h6 {
 }
 .brand__awesome {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
     top: 144px;
     left: 46px;
     font-family: "Poppins";
@@ -323,8 +299,8 @@ h6 {
 }
 .brand__store {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
     top: 142px;
     left: 185px;
     font-family: "Quicksand";
@@ -335,13 +311,15 @@ h6 {
     color: #ffffff;
     -webkit-text-stroke: 3px #000000;
 }
-.button {
+
+.button__block {
     display: flex;
     align-items: center;
-    margin: 133px 0 0 155px;
-    padding: 0 0 117px 0;
+    padding: 133px 0 0 155px;
+    margin-bottom: 200px;
+    /* margin: 133px0 0 155px; */
 }
-.button__started {
+.button__block-started {
     display: inline-block;
     width: 167px;
     height: 63px;
@@ -356,7 +334,7 @@ h6 {
     font-size: 24px;
     line-height: calc(30 / 24 * 100%);
 }
-.button__bullets {
+.button__block-bullets {
     margin: 0 0 0 41px;
     width: 68px;
     height: 68px;
@@ -391,7 +369,7 @@ h6 {
         width: 20px;
     }
     .decor__right {
-        top: 87%;
+        top: 67%;
         width: 20px;
     }
 }
@@ -400,7 +378,7 @@ h6 {
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin: 104px 0 0 0;
+        padding-top: 50px;
     }
     .main__column {
         width: 100%;
@@ -415,6 +393,10 @@ h6 {
     .decor__right {
         top: 40%;
         width: 30px;
+    }
+    .button__block {
+        padding-bottom: 133px;
+        margin-bottom: 0;
     }
 }
 @media (max-width: 767px) {
